--- a/Suaah/Areas/Customer/Views/HotelBookings/Create.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Create.cshtml
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input asp-for="Date" class="form-control" type="datetime-local" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -57,19 +57,12 @@
                 <input asp-for="NumberOfDays" class="form-control" />
                 <span asp-validation-for="NumberOfDays" class="text-danger"></span>
             </div>
-            @*   <div class="form-group">
-                <label asp-for="TotalPrice" class="control-label"></label>
-                <input asp-for="TotalPrice" class="form-control" />
-                <span asp-validation-for="TotalPrice" class="text-danger"></span>
-                </div>*@
+            
             <div class="form-group">
                 <label asp-for="HotelRoomId" class="control-label"></label>
                 <select asp-for="HotelRoomId" class="form-control" asp-items="ViewBag.roomId"></select>
             </div>
-            @* <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
-                </div>*@
+            
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
