--- a/Suaah/Areas/Admin/Views/FlightClasses/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightClasses/Index.cshtml
@@ -23,6 +23,9 @@
         </div>
     
 </div>
+<div class="row m-2">
+        <a class="btn btn-danger offset-5 col-2" asp-action="Index">Back to full list</a>
+    </div>
 </form>
 <table class="table">
     <thead>
