--- a/Suaah/Areas/Admin/Views/Airports/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Airports/Index.cshtml
@@ -35,6 +35,9 @@
         </div>
 
     </div>
+    <div class="row m-2">
+        <a class="btn btn-danger offset-5 col-2" asp-action="Index">Back to full list</a>
+    </div>
 </form>
 
  <div class="row m-4">
