--- a/Suaah/Areas/Admin/Views/Customers/Users.cshtml
+++ b/Suaah/Areas/Admin/Views/Customers/Users.cshtml
@@ -42,6 +42,9 @@
         </div>
     
 </div>
+<div class="row m-2">
+        <a class="btn btn-danger offset-5 col-2" asp-action="Users">Back to full list</a>
+    </div>
 </form>
 <table class="table">
     <thead>
