--- a/Suaah/Views/Shared/_Pagination.cshtml
+++ b/Suaah/Views/Shared/_Pagination.cshtml
@@ -1,12 +1,6 @@
-﻿<form asp-action="Index" method="get">
-    <div class="form-actions no-color text-center p-3">
+﻿
+ <label class="control-label">Page Size</label>
+<input type="number" name="pagesize" class="p-2" value="@ViewBag.PageSize" />
 
-
-            <input type="number" name="pagesize" class="p-2" value="@ViewBag.PageSize" placeholder="Page Size"/>
-  
-            <input type="number" name="pagenumber" class="p-2" value="@ViewBag.PageNumber" placeholder="Page Number"/>
-        
-            <input type="submit" class="btn btn-danger" value="Go" />
- 
-    </div>
-</form>
+ <label class="control-label">Page Number</label>
+<input type="number" name="pagenumber" class="p-2" value="@ViewBag.PageNumber" />
