--- a/Suaah/Areas/Admin/Views/AllHotelBookingHeaders/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/AllHotelBookingHeaders/Details.cshtml
@@ -127,9 +127,6 @@
                                 </div>
                             </div>
 
-                            @*    <input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />*@
-
-
                         </div>
                         <div class="col-12 col-lg-5 offset-lg-1">
                             <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -142,9 +139,9 @@
                                 {
                                     <li class="list-group-item d-flex justify-content-between p-2">
                                         <div class="row container">
-                                            <div class="col-8">
+                                            <div class="col-9 ">
 
-                                                <h6 class="my-0 text-primary  d-inline">Room, Hotel: </h6><small class="text-muted mx-4">@*@item.HoteRoom.Type,*@@item.HoteRoom.Description, @item.HoteRoom.Hotel.Name </small><br>
+                                                <h6 class="my-0 text-primary">Room, Hotel: </h6><small class="text-muted mx-4 ">@item.HoteRoom.Description, @item.HoteRoom.Hotel.Name </small><br>
                                                <h6 class="my-0 text-primary  d-inline"> Price For Day: </h6><small class="text-muted mx-5">@item.PriceForDay</small><br />
                                                <h6 class="my-0 text-primary  d-inline"> Number Of Days:</h6> <small class="text-muted mx-4">@item.NumberOfDays</small><br />
                                                <h6 class="my-0 text-primary  d-inline"> Number Of Rooms:</h6><small class="text-muted mx-2"> @item.NumberOfRooms</small><br />
@@ -152,7 +149,7 @@
                                                 <h6>Services</h6>
                                                 @foreach (var item2 in item.HoteRoom.Services)
                                                 {
-                                                    <small class="text-muted mx2">@item2.Services.Name</small>
+                                                    <small class="text-muted mx-2">@item2.Services.Name</small> <br />
 
                                                 }
                                             </div>
@@ -177,9 +174,6 @@
                                     </li>
                                 }
                             </ul>
-
-                            @* <input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
-                                <input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />*@
 
                             @if (Model.HotelBookingHeader.Payment == SD.Payment_Approved && Model.HotelBookingHeader.Status != SD.Status_Done)
                             {
